# ml-with-llm

./: .gitignore  .pre-commit-config.yaml  README.md  et --soft HEAD~1  pyproject.toml
.readme/: session_01.md  session_02.md  session_03.md  session_04.md  session_06.md  session_07.md
docker-compose/: Makefile  demo.py  redpanda.yml  technical-indicators-historical.yml  technical-indicators-live.yml
services/candles/: Dockerfile  Makefile  config.py  historical.settings.env  live.settings.env  run.py  settings.env
services/news/: Makefile  config.py  news_data_source.py  news_downloader.py  settings.env
services/news-signal/: Makefile  config.py  example.env  pyproject.toml  settings.env
services/news-signal/llms/: base.py  claude.py  config.py  factory.py  ollama.py  openai.py
services/news_signal/: Makefile  demo.py  example.env  fine_tuning.py  golden_dataset.py  pyproject.toml  settings.env
services/news_signal/llms/: base.py  claude.py  factory.py  ollama.py  openai.py
services/technical-indicators/: Dockerfile  Makefile  candle.py  config.py  historical.settings.env  live.settings.env  pyproject.toml  run.py  settings.env  tech2.txt  technical_indicators.py
services/to-feature-store/: Dockerfile  Makefile  aws.env  aws.py  config.py  historical.settings.env  live.settings.env  pyproject.toml  run.py  settings.env  sink.py  sinks.py  tech_indica.csv
services/trades/: Makefile  config.py  historical.settings.env  live.settings.env  naive.Dockerfile  pyproject.toml  run.py  settings.env
services/trades/kraken_api/: base.py  mock.py  rest.py  (+2 more)
