[project]
name = "news-signal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "llama-index>=0.12.5",
    "llama-index-core>=0.12.5",
    "llama-index-llms-anthropic>=0.5.0",
    "llama-index-llms-ollama>=0.5.0",
    "llama-index-llms-openai>=0.3.10",
    "loguru>=0.7.3",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.7.0",
    "quixstreams>=0.5.7",
]
