[project]
name = "to-feature-store"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "pyarrow>=18.1.0",
    "pydantic-settings>=2.6.1",
    "quixstreams>=3.4.0",
    "referencing>=0.35.1",
    "hopsworks>=4.1.4",
]
